# wgpu-study

./: Cargo.toml
antimodern/src/: main.wgsl
antimodern/src/entity/: mod.rs
antimodern/src/renderer/cube/: main.wgsl
antimodern/src/renderer/particles/: main.wgsl  mod.rs
foul-salsa/src/: bloom_fs_blur.wgsl  entity.rs  main.rs  renderer.rs  surface.rs
src/: app.rs  bloom.wgsl  bloom_fs_blur.wgsl  bloom_fs_bright.wgsl  bloom_fs_combine.wgsl  bloom_pass.rs  component.rs  composite.wgsl  composite_pass.rs  draw_texture_fs.wgsl  entity.rs  frame_buffers.rs  main.rs  main.wgsl  particle.wgsl  particle_pass.rs  renderer.rs  samplers.rs  tonemap.wgsl  window.rs
src/cube/: entity.rs  mod.rs  pipeline.rs
src/entity/: mod.rs
src/particles/: entity.rs  main.wgsl  pipeline.rs
src/renderer/: buffer_writer.rs  mod.rs  render_target.rs  renderer.rs  wgpu_ext.rs
src/renderer/billboard/: main.wgsl  mod.rs
src/renderer/cube/: mod.rs
src/renderer/particle/: mod.rs
src/renderer/particles/: main.wgsl  mod.rs
src/renderer/postprocessing/: add.rs  blur copy.rs  blur.rs  blur_downsample.fragment.wgsl  blur_downsample.rs  blur_upsample.rs  bright_pass.rs  compose.fragment.wgsl  compose.rs  copy.fragment.wgsl  copy.rs  fs_add.wgsl  fs_blur.wgsl  fs_blur_upsample.wgsl  fs_bright_pass.wgsl  fs_compose.wgsl  fs_copy.wgsl  mod.rs
src/renderer/postprocessing/render_pass/: add.rs  blur.rs  blur_downsample.fragment.wgsl  blur_downsample.rs  blur_upsample.fragment.wgsl  (+7 more)
steel-tadpole/src/: component.rs  main.rs  window.rs
steel-tadpole/src/renderer/: renderer.rs  wgpu_ext.rs
(+6 files in other folders)
