[package]
name = "antimodern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.9"
glam = { version = "0.20", features = ["bytemuck"] }
log = "0.4"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "master" }
